--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -7,6 +7,8 @@
       <li> New special tag "zipX" for the [/help/robot-restrict|robot-restrict]
            setting blocks robot access to tarballs, but with exceptions to support
            automated build systems.
+      <li> Tags of the form "ext/PATH" in the robot-restrict setting block access
+           by robots to specific [./serverext.wiki|CGI extension] at PATH.
       <li> Enhancements to the default value for the
            [/help/robot-restrict|robot-restrict setting].
       </ol>
@@ -32,9 +34,9 @@
        <li> The artifact hash in the detail section of each timeline entry is now
             emphasized (controlled by CSS) to make it easier to locate amid all
             the other text and links.
-       <li> When clicking on the ellipsis in "Compact" or "Simple" views, the ellipsis
-            is replaced by a left arrow ("←") which can be clicked to hide the extra
-            detail again.
+       <li> When clicking on the ellipsis in "Compact" or "Simple" views, the
+            ellipsis is replaced by a left arrow ("←") which can be clicked to
+            hide the extra detail again.
        <li> New setting [/help/timeline-mark-leaves|timeline-mark-leaves] controls
             whether or not leaf check-ins are marked in the timeline.
        <li> "No-graph" timelines (using the "ng" query parameter) now show
