--- a/www/serverext.wiki
+++ b/www/serverext.wiki
@@ -340,6 +340,13 @@ can examine the FOSSIL_CAPABILITIES and/or FOSSIL_USER environment variables.
 In other words, access control is the responsibility of the individual
 extension programs.
 
+<h3>6.1 Restricting Robot Access To Extensions</h3>
+
+If the "ext" tag is found in the [/help/robot-restrict|robot-restrict setting]
+then clients are tested to see if they are robots before granting
+access to any extension.  If the "ext" tag is omitted but a tag
+of the form "ext/PATH" is found on the robot-restrict setting, then
+robots are restricted from the particular extension at PATH.
 
 <h2>7.0 Trouble-Shooting Hints</h2>
 
