Get the message widget content stretching in zoom mode. Update the change log.
FossilOrigin-Name: a45b75c0bd1e8695fa7cf6b0b10fb77577410e95d0ec82b18eacf0e6f8e7387d

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -50,6 +50,8 @@
        can be used to fix a checkout after moving its repository file.
   <li> Update internal Unicode character tables, used in regular expression
        handling, from version 13 to 17.
+  <li> Add a zoom-message option to [/help/www/chat|/chat] to better support
+       pikchr diagrams.
 </ol>
 
 <h2 id='v2_27'>Changes for version 2.27 (2025-09-30)</h2><ol>
