Add the new "fossil get" command to the 2.28 change log.
FossilOrigin-Name: f83134bc9d3a65a3a537f9ffe5a042cebadb492522534beafe0f6118d19a026e

--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -25,6 +25,8 @@
             [/sitemap] and thus on the hamburger menu.
        <li> The filenames for tarballs and ZIPs are now standardized to
             include a timestamp and a hash prefix.
+       <li> New "[/help/get|fossil get]" command downloads and unpacks a specific
+            check-in without having to clone the repository.
        </ol>
   <li> Timeline enhancements:<ol type="a">
        <li> A new "Simple" view is available.  This is compromise between "Verbose"
