Fix a documentation typo.
FossilOrigin-Name: bd70ec5fda11e05a5b340e1459dc5f1030b7f79371bd8ad9e4b4ec7e218b5bf4

--- a/www/serverext.wiki
+++ b/www/serverext.wiki
@@ -141,7 +141,7 @@ For example, the author of this documentation page is running
 very paragraph, and presses Reload from time to time to view his
 edits.
 
-A same idea applies when developing new CGI applications using a script
+The same idea applies when developing new CGI applications using a script
 language (for example using [https://wapp.tcl.tk|Wapp]).  Run the
 command "<tt>fossil ui --extpage SCRIPT</tt>" where SCRIPT is the name
 of the application script, while editing that script in a separate
