--- a/www/changes.wiki
+++ b/www/changes.wiki
@@ -46,6 +46,8 @@
             circles appear, but no lines connecting them.
             ([/timeline?ng|example]).
        </ol>
+  <li> Labels in Markdown now have IDs generated using the GitHub "slugify"
+       algorithm.
   <li> The [/help/timeline|timeline command] is enhanced with the new options
        "<tt>-u|--for-user</tt>" to filter by user, and "<tt>-r</tt>" to display
        entries in chronological order.
