Update the default value of the robot-restrict setting mentioned in the Defense against Spiders and Robots document, and add a source code comment indicating where the setting is referenced.
FossilOrigin-Name: 67726b6e82882f9aa51589e4251dc2b0603da7cc63c757eb0f5a3eae8eb99a4a

--- a/www/antibot.wiki
+++ b/www/antibot.wiki
@@ -141,7 +141,7 @@ list of GLOB patterns for pages for which robot access is prohibited.
 The default value is:
 
 <blockquote><pre>
-timelineX,diff,annotate,fileage,file,finfo,reports
+timelineX,diff,annotate,fileage,file,finfo,reports,tree,hexdump,download
 </pre></blockquote>
 
 Each entry corresponds to the first path element on the URI for a
